# kobuki_X_braccio

./: .gitignore
src/brac_msgs/: CMakeLists.txt  package.xml
src/brac_msgs/srv/: getTarget.srv  setInit.srv
src/braccio/: CMakeLists.txt  package.xml
src/braccio/include/braccio/: PID.h  main.h
src/braccio/launch/: bracXreal.launch  braccio.launch
src/braccio/src/: main.cpp
src/custom_msgs/: CMakeLists.txt  package.xml
src/custom_msgs/msg/: Comm.msg  HumanPose.msg  Intl.msg  Object.msg  Realsense.msg
src/kobuki_communication/: CMakeLists.txt  package.xml
src/kobuki_communication/launch/: communication.launch
src/kobuki_communication/scripts/: comm.py  main.py
src/kobuki_hand/: CMakeLists.txt  package.xml
src/kobuki_hand/launch/: hand.launch  hand_track.launch  threed.launch
src/kobuki_hand/scripts/: hand_track.py  main.py  threed.py
src/kobuki_intelligent/: CMakeLists.txt  package.xml
src/kobuki_intelligent/include/kobuki_intelligent/: intelligent.h  object.h
src/kobuki_intelligent/launch/: main.launch
src/kobuki_intelligent/src/: intelligent.cpp  main.cpp  running.cpp  utility.cpp
src/kobuki_yolo/: CMakeLists.txt  package.xml
src/kobuki_yolo/include/: frame_process.h
src/kobuki_yolo/include/camera/: realsense.h
src/kobuki_yolo/include/kobuki_yolo/: subscribe_frame.h
src/kobuki_yolo/include/object_detection/yolo/: object_detection.h
src/kobuki_yolo/include/object_detection/yolo/inference/: inference.h
src/kobuki_yolo/include/ros/: ros_publisher.h
src/kobuki_yolo/include/utility/: model_config.h
src/kobuki_yolo/launch/: human.launch  mediapipe.launch  object.launch  yolo.launch
src/kobuki_yolo/scripts/: main.py
src/kobuki_yolo/src/: frame_process.cc  main.cc  subscribe_frame.cpp
src/kobuki_yolo/src/camera/: realsense.cc
src/kobuki_yolo/src/object_detection/yolo/: object_detection.cc
src/kobuki_yolo/src/object_detection/yolo/inference/: inference.cc
src/kobuki_yolo/src/ros/: ros_publisher.cc
src/kobuki_yolo/src/utility/: model_config.cc
