<?xml version="1.0"?>
<package format="2">
  <name>braccio</name>
  <version>0.0.0</version>
  <description>The hand-gesture package</description>

  <maintainer email="m.amir.hs19@gmail.com">Muhammad Amir Abdurrozaq</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>ecl_exceptions</build_depend>
  <build_depend>ecl_threads</build_depend>
  <build_depend>ecl_time</build_depend>
  <build_depend>kobuki_msgs</build_depend>
  <build_depend>serial</build_depend> <!-- Ditambahkan -->

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>ecl_exceptions</exec_depend>
  <exec_depend>ecl_threads</exec_depend>
  <exec_depend>ecl_time</exec_depend>
  <exec_depend>kobuki_msgs</exec_depend>
  <exec_depend>serial</exec_depend> <!-- Ditambahkan -->

  <depend>brac_msgs</depend>
  <depend>yocs_cmd_vel_mux</depend>
  <depend>yocs_velocity_smoother</depend>

</package>
