<?xml version="1.0"?>
<package format="2">
  <name>kobuki_communication</name>
  <version>0.0.0</version>
  <description>The hand-gesture package</description>

  <maintainer email="m.amir.hs19@gmail.com">root</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>

  <exec_depend>rospy</exec_depend>



  <depend>custom_msgs</depend>


</package>
