<?xml version="1.0"?>
<package format="2">
  <name>kobuki_yolo</name>
  <version>0.0.0</version>
  <description>The hand-gesture package</description>

  <maintainer email="m.amir.hs19@gmail.com">root</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>


  <build_depend>ecl_exceptions</build_depend>
  <build_depend>ecl_threads</build_depend>
  <build_depend>ecl_time</build_depend>
  
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>message_filters</build_depend>

  <build_depend>kobuki_msgs</build_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>

  <exec_depend>ecl_exceptions</exec_depend>
  <exec_depend>ecl_threads</exec_depend>
  <exec_depend>ecl_time</exec_depend>

  <exec_depend>kobuki_msgs</exec_depend>

  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>message_filters</exec_depend>

  <exec_depend>yocs_cmd_vel_mux</exec_depend>
  <exec_depend>yocs_velocity_smoother</exec_depend>

  <depend>custom_msgs</depend>


</package>
